# zero

./: Cargo.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemtry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
